--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Golden Horses</string>
+    <string name="nombre_jugador_placeholder">Nombre del jugador</string>
+    <string name="introduce_nombre">Debes introducir tu nombre de usuario</string>
+    <string name="numero_partidas">Número de partidas</string>
+    <string name="victorias">Victorias</string>
+    <string name="select_your_horse">Elige tu caballo</string>
+    <string name="your_bet">Tu apuesta:</string>
+    <string name="select_horse_toast">Selecciona un caballo</string>
+    <string name="no_coins_toast">¡No te quedan monedas! Te regalamos 20 más para que puedas jugar!</string>
+    <string name="winner">¡Has ganado!</string>
+    <string name="looser">Ha ganado:</string>
 </resources>
