Firebase y google autenticator

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,6 @@
     <string name="no_coins_toast">You have no coins left! Here are 20 more so you can keep playing!</string>
     <string name="winner">You won!</string>
     <string name="looser">The winner was:</string>
+    <string name="default_web_client_id">584379056162-3cdbnvv7uul7hldu6ng54nnselm3dv53.apps.googleusercontent.com</string>
+
 </resources>
